--- a/src/main.html
+++ b/src/main.html
@@ -2,16 +2,17 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Localhost</title>
+  <meta charset="UTF-8">
+  <title>Localhost</title>
 </head>
 
 <body>
-    <p></p>
+  <div class="container"></div>
 </body>
 
 <script>
-    require("./client/tsx/reactdemo.js")
+  require("./app.js")
+
 </script>
 
 </html>
